# ferris

./: .gitignore  Makefile  README.md  pyproject.toml
src/: attention.py  config.py  dataset.py  ift.py  main.py  train.py  util.py
src/data/: __init__.py  dataset.py
src/dataset/: __init__.py  dataset.py
src/transformer/: __init__.py  attention.py  layer_norm.py  model.py
src/transformer/layers/: __init__.py  attention.py  block.py  feed_forward.py  lora.py  norm.py
