[project]
name = "ferris"
version = "0.1.0"
description = "GPT-like Large Language Model"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.2.6",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "datasets>=4.4.1",
    "tqdm>=4.67.1",
]
